--- a/Zero_Shot_with_FLAN_T5.ipynb
+++ b/Zero_Shot_with_FLAN_T5.ipynb
@@ -69,7 +69,7 @@
         "id": "snrb1haB1DN8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 345,
+          "height": 345
         },
         "outputId": "a9f5353d-d19c-48b5-b794-eb38fa15c89a"
       },
