--- a/finetuned_BioBERT.ipynb
+++ b/finetuned_BioBERT.ipynb
@@ -55,6 +55,29 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Define compute_metrics function\n",
+    "\n",
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    preds = np.argmax(logits, axis=-1)\n",
+    "    acc = accuracy_score(labels, preds)\n",
+    "    f1 = f1_score(labels, preds, average='macro')\n",
+    "    return {\"accuracy\": acc, \"f1\": f1}\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-11-08T07:30:38.523232Z",
+     "start_time": "2025-11-08T07:30:38.514784Z"
+    }
+   },
+   "id": "6cd1f7d5efa7113f",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
@@ -64,13 +87,6 @@
     "import evaluate\n",
     "from transformers import Trainer, TrainingArguments\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
-    "\n",
-    "def compute_metrics(eval_pred):\n",
-    "    logits, labels = eval_pred\n",
-    "    preds = np.argmax(logits, axis=-1)\n",
-    "    acc = accuracy_score(labels, preds)\n",
-    "    f1 = f1_score(labels, preds)\n",
-    "    return {\"accuracy\": acc, \"f1\": f1}\n",
     "\n",
     "learning_rates = [5e-6, 3e-5, 5e-5]\n",
     "batch_sizes = [4, 8]\n",
@@ -222,7 +238,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
     "# Print samples of QA \n",
