--- a/PubMedQA_Preprocessing.ipynb
+++ b/PubMedQA_Preprocessing.ipynb
@@ -36,10 +36,23 @@
         "tqdm.pandas()"
       ],
       "metadata": {
-        "id": "S-mtiJJ1fnMi"
+        "id": "S-mtiJJ1fnMi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6926f05e-14db-4aa2-8d2b-685319b93f2b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -54,9 +67,26 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OLb3Z185LL4K"
+        "id": "OLb3Z185LL4K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "55b4e1e4-584b-4be5-ffe4-5edf1f3d4c66"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
+            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
+            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
+            "You will be able to reuse this secret in all of your notebooks.\n",
+            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "# Load PubMedQA\n",
         "pubmed = pd.read_parquet(\"hf://datasets/qiaojin/PubMedQA/pqa_artificial/train-00000-of-00001.parquet\")\n",
@@ -91,10 +121,68 @@
         "pubmed_raw_df = pubmed_raw_df.drop('context', axis=1)"
       ],
       "metadata": {
-        "id": "xLRVG6uFi6K7"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 81,
+          "referenced_widgets": [
+            "b08ad85bd41c4b359316945e9ee9546b",
+            "a41622b3262e454195dc48245e1a4e38",
+            "6e33dbba82814aa692fa07d1a9b6eda7",
+            "fb7d5d4800914338843b978a71984e0e",
+            "d4fbbb14d5f04ccfb82fe1fac7af481d",
+            "0716c2b0dd6341149af30e167ca79735",
+            "c7c42f7131f7413dbc7dbf31a6a5e1ca",
+            "b7097baaa11c43ac9147ce53d964a164",
+            "033a5eaa6e0e4368baef291d9aff1830",
+            "fc5661c3ce584efcacb838e70737abad",
+            "166b9599b6814be18cbc209469de4780",
+            "c60e49e6b8b94ed3940fc003f8f60f48",
+            "eafc40c57fdb4e889ed7087985a37c76",
+            "cce06a8a79024fc78b85ee7c74e3a6c5",
+            "c33f0527ed4a41e5b64092f485b9feb5",
+            "ca79c663d48045e6abde56d5259c03ec",
+            "682b55a061974ecb8f5b07e70ae7c2b5",
+            "42e11669cd5c45548db15d83bbdab81e",
+            "7bb11bc44fdf4c858f21cf7436f76568",
+            "d9d352c962034147b07a17e96ff0b7dc",
+            "4c953a6c9c4a4ba9b5e1b3e59ca9cd5c",
+            "655c8d61526e451087dcc89d6a46b960"
+          ]
+        },
+        "outputId": "760fcefe-9182-4b59-852c-eb04e7f4d0b9",
+        "id": "VkNJLCuwJtqy"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/211269 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "b08ad85bd41c4b359316945e9ee9546b"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/211269 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "c60e49e6b8b94ed3940fc003f8f60f48"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -143,10 +231,50 @@
         "print(f\"Extracted {len(diabetes_df)} diabetes-related samples out of {len(pubmed_raw_df)} total.\")"
       ],
       "metadata": {
-        "id": "Y_9bWhdli6ox"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66,
+          "referenced_widgets": [
+            "2e90f4357b3e4c5990b96c23a91a75a8",
+            "c5e84dd9dbd040768b3f25dc9d35b95e",
+            "2707f94434cd44e4b9d85f3a072cbe6f",
+            "2c6dcea0b4684043896d0c1336ab3afa",
+            "8f0f5ced5f5c455abaad26bd05ced173",
+            "32fbe018741448a69a534bdf65cfffcb",
+            "18d7965f99be4ec5830a4c783cfc0546",
+            "30811afabdce4aacab45e06dca6e4f8f",
+            "98b1ce090c3e452484ee5ef45ba460bf",
+            "1c1647f1c60a4b88a0a01d007d2e2510",
+            "1542ef51764546dea83b7d939fc7a33c"
+          ]
+        },
+        "outputId": "66ca2262-fead-4c5f-bd2e-5032108f7a8e",
+        "id": "1qjFt7hfJmXJ"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Filtering for diabetes-related MeSH terms:   0%|          | 0/211269 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "2e90f4357b3e4c5990b96c23a91a75a8"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracted 13739 diabetes-related samples out of 211269 total.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -156,6 +284,96 @@
       "metadata": {
         "id": "OZoI9Bcg2G4u"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract context from context dictionary\n",
+        "\n",
+        "# Function to extract 'contexts' from each row\n",
+        "def extract_contexts(row):\n",
+        "\n",
+        "    row_dict = row['context']\n",
+        "\n",
+        "    # Get the list of contexts\n",
+        "    return \" \".join(row_dict.get(\"contexts\", []))  # join all contexts as a single string\n",
+        "\n",
+        "# Function to extract 'contexts' from each row\n",
+        "def extract_meshes(row):\n",
+        "\n",
+        "    row_dict = row['context']\n",
+        "\n",
+        "    # Get the list of meshes — return as list (not string)\n",
+        "    return row_dict.get(\"meshes\", [])\n",
+        "\n",
+        "# Apply to the dataframe\n",
+        "pubmed_raw_df['extracted_contexts'] = pubmed_raw_df.progress_apply(extract_contexts, axis=1)\n",
+        "pubmed_raw_df['meshes'] = pubmed_raw_df.progress_apply(extract_meshes, axis=1)\n",
+        "pubmed_raw_df = pubmed_raw_df.drop('context', axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 81,
+          "referenced_widgets": [
+            "b08ad85bd41c4b359316945e9ee9546b",
+            "a41622b3262e454195dc48245e1a4e38",
+            "6e33dbba82814aa692fa07d1a9b6eda7",
+            "fb7d5d4800914338843b978a71984e0e",
+            "d4fbbb14d5f04ccfb82fe1fac7af481d",
+            "0716c2b0dd6341149af30e167ca79735",
+            "c7c42f7131f7413dbc7dbf31a6a5e1ca",
+            "b7097baaa11c43ac9147ce53d964a164",
+            "033a5eaa6e0e4368baef291d9aff1830",
+            "fc5661c3ce584efcacb838e70737abad",
+            "166b9599b6814be18cbc209469de4780",
+            "c60e49e6b8b94ed3940fc003f8f60f48",
+            "eafc40c57fdb4e889ed7087985a37c76",
+            "cce06a8a79024fc78b85ee7c74e3a6c5",
+            "c33f0527ed4a41e5b64092f485b9feb5",
+            "ca79c663d48045e6abde56d5259c03ec",
+            "682b55a061974ecb8f5b07e70ae7c2b5",
+            "42e11669cd5c45548db15d83bbdab81e",
+            "7bb11bc44fdf4c858f21cf7436f76568",
+            "d9d352c962034147b07a17e96ff0b7dc",
+            "4c953a6c9c4a4ba9b5e1b3e59ca9cd5c",
+            "655c8d61526e451087dcc89d6a46b960"
+          ]
+        },
+        "id": "xLRVG6uFi6K7",
+        "outputId": "760fcefe-9182-4b59-852c-eb04e7f4d0b9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/211269 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "b08ad85bd41c4b359316945e9ee9546b"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  0%|          | 0/211269 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "c60e49e6b8b94ed3940fc003f8f60f48"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -376,14 +594,46 @@
         "\n",
         "    return df\n",
         "\n",
-        "pubmed_clean_df = preprocess_qa(diabetes_df)\n",
-        "pubmed_clean_df.to_excel(\"pubmed_clean.xlsx\", index=False)"
+        "pubmed_clean_df = preprocess_qa(diabetes_df)"
       ],
       "metadata": {
-        "id": "mPSF36CBzXVG"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125,
+          "referenced_widgets": [
+            "5a276658e6e5418a9e3420a60a51c699",
+            "cf6f57ffc9264f7ebd043ebdb8158933",
+            "3cb02e76107f4173abdf9015ed275a7e",
+            "0c809688288c4a608c208ffc8ee4897e",
+            "b752582c97904b7ebec6e0d9ef021043",
+            "6673c0d17a7d4fd2ab67c87c3592ed52",
+            "913b160abebc4e3fb66f64dac5c5dd8e",
+            "bfca279b20084cd495db16e902e24167",
+            "40013f704da5467ab4d2776d0d8424a9",
+            "a4a2d463a65647e1aa1bbb6acba27282",
+            "c712bf3a8a6d4f84a5e83c13d8e74818"
+          ]
+        },
+        "outputId": "332f9b0b-ca52-4636-d6ea-c4b36a39fa7a",
+        "id": "GhOSohk-J5Ei"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Cleaning QAs:   0%|                                                       | 0/13739 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "5a276658e6e5418a9e3420a60a51c699"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -397,43 +647,48 @@
     {
       "cell_type": "code",
       "source": [
-        "def create_all_datasets(df_clean):\n",
-        "\n",
+        "def create_all_datasets(df_clean, sentences_per_passage=3):\n",
+        "    # Initialize lists\n",
         "    qa_rows = []\n",
         "    summarization_rows = []\n",
         "    rag_rows = []\n",
         "\n",
+        "    passage_counter = 0\n",
+        "    question_counter = 0\n",
         "\n",
         "    for _, row in tqdm(df_clean.iterrows(), total=len(df_clean), desc=\"Processing data\", ncols=100):\n",
         "        question = row['question_clean']\n",
         "        context = row['context_clean']\n",
         "        answer = row['answer_clean']\n",
-        "        final_decision = row.get('final_decision', None)\n",
+        "        final_decision = row['final_decision']\n",
         "\n",
         "        if pd.isna(question) or pd.isna(context) or pd.isna(answer):\n",
         "            continue\n",
         "\n",
         "        # QA dataset\n",
-        "        qa_rows.append({\n",
-        "            'question': question,\n",
-        "            'context': context,\n",
-        "            'answer': answer,\n",
-        "            'final_decision': final_decision\n",
-        "        })\n",
+        "        qa_rows.append({'question': question, 'context': context, 'answer': answer, 'final_decision': final_decision})\n",
         "\n",
         "        # Summarisation dataset\n",
-        "        summarization_rows.append({\n",
-        "            'context': context,\n",
-        "            'summary': answer\n",
-        "        })\n",
+        "        summarization_rows.append({'context': context, 'summary': answer})\n",
         "\n",
-        "        # RAG dataset — use the entire context as a single passage\n",
-        "        rag_rows.append({\n",
-        "            'question': question,\n",
-        "            'answer': answer,\n",
-        "            'final_decision': final_decision,\n",
-        "            'passage': context\n",
-        "        })\n",
+        "        # RAG dataset: split context into passages\n",
+        "        sentences = sent_tokenize(context)\n",
+        "        for i in range(0, len(sentences), sentences_per_passage):\n",
+        "            passage_sentences = sentences[i:i+sentences_per_passage]\n",
+        "            passage_text = \" \".join(passage_sentences).strip()\n",
+        "\n",
+        "            if passage_text:  # skip empty passages\n",
+        "                rag_rows.append({\n",
+        "                    'question_id': question_counter,\n",
+        "                    'question': question,\n",
+        "                    'final_decision': final_decision,\n",
+        "                    'answer': answer,\n",
+        "                    'passage': passage_text,\n",
+        "                    'passage_id': passage_counter\n",
+        "                })\n",
+        "                passage_counter += 1\n",
+        "\n",
+        "        question_counter += 1\n",
         "\n",
         "    # Create DataFrames\n",
         "    qa_dataset = pd.DataFrame(qa_rows).drop_duplicates().reset_index(drop=True)\n",
@@ -442,20 +697,51 @@
         "\n",
         "    return qa_dataset, summarization_dataset, rag_dataset\n",
         "\n",
+        "qa_data, summarization_data, rag_data = create_all_datasets(pubmed_clean_df, sentences_per_passage=3)\n",
         "\n",
-        "# Example usage\n",
-        "qa_data, summarization_data, rag_data = create_all_datasets(pubmed_clean_df)\n",
-        "\n",
-        "# Optionally save to Excel\n",
+        "# Save to Excel\n",
         "qa_data.to_excel(\"qa_dataset.xlsx\", index=False)\n",
         "summarization_data.to_excel(\"summarization_dataset.xlsx\", index=False)\n",
-        "rag_data.to_excel(\"rag_dataset.xlsx\", index=False)\n"
+        "rag_data.to_excel(\"rag_dataset.xlsx\", index=False)"
       ],
       "metadata": {
-        "id": "bkiv5D2YufVD"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125,
+          "referenced_widgets": [
+            "11a1930b327148a4a9f0ea77f3780c21",
+            "971311b34ff744aa82f02f49fedfbff1",
+            "098f9c7e938d41c6af53cb288a0dfc97",
+            "b3662c7ccb4245d3b9a33d5bbd057d89",
+            "efffa689b40b4863b6ce5d1e14e1a695",
+            "b6af992371d04614a990b29764fa1225",
+            "d82af35049894af280d8f0b9fee45438",
+            "ca7eb237f3fd46b09dbcac54407c4f68",
+            "a42ce621a8344185a49c2522a8aeeb20",
+            "9247ed5c0e3f4e8da58453538584525c",
+            "e8a1386a0cd94040bd2a84f90b758ddb"
+          ]
+        },
+        "outputId": "8816cb47-4010-4256-e690-04879d195a8f",
+        "id": "lKtiSYlmKF1L"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Processing data:   0%|                                                    | 0/13738 [00:00<?, ?it/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "11a1930b327148a4a9f0ea77f3780c21"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
