--- a/PubMedQA_Preprocessing.ipynb
+++ b/PubMedQA_Preprocessing.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -34,13 +33,29 @@
         "import nltk\n",
         "from nltk.tokenize import sent_tokenize\n",
         "\n",
+        "# Ensure punkt is downloaded\n",
+        "nltk.download('punkt_tab')\n",
+        "\n",
         "tqdm.pandas()"
       ],
       "metadata": {
-        "id": "S-mtiJJ1fnMi"
+        "id": "S-mtiJJ1fnMi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6926f05e-14db-4aa2-8d2b-685319b93f2b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -59,7 +74,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c0e16e0-c1d8-490d-9c1a-a89745d6a068"
+        "outputId": "55b4e1e4-584b-4be5-ffe4-5edf1f3d4c66"
       },
       "outputs": [
         {
@@ -109,68 +124,10 @@
         "pubmed_raw_df = pubmed_raw_df.drop('context', axis=1)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 81,
-          "referenced_widgets": [
-            "b08ad85bd41c4b359316945e9ee9546b",
-            "a41622b3262e454195dc48245e1a4e38",
-            "6e33dbba82814aa692fa07d1a9b6eda7",
-            "fb7d5d4800914338843b978a71984e0e",
-            "d4fbbb14d5f04ccfb82fe1fac7af481d",
-            "0716c2b0dd6341149af30e167ca79735",
-            "c7c42f7131f7413dbc7dbf31a6a5e1ca",
-            "b7097baaa11c43ac9147ce53d964a164",
-            "033a5eaa6e0e4368baef291d9aff1830",
-            "fc5661c3ce584efcacb838e70737abad",
-            "166b9599b6814be18cbc209469de4780",
-            "c60e49e6b8b94ed3940fc003f8f60f48",
-            "eafc40c57fdb4e889ed7087985a37c76",
-            "cce06a8a79024fc78b85ee7c74e3a6c5",
-            "c33f0527ed4a41e5b64092f485b9feb5",
-            "ca79c663d48045e6abde56d5259c03ec",
-            "682b55a061974ecb8f5b07e70ae7c2b5",
-            "42e11669cd5c45548db15d83bbdab81e",
-            "7bb11bc44fdf4c858f21cf7436f76568",
-            "d9d352c962034147b07a17e96ff0b7dc",
-            "4c953a6c9c4a4ba9b5e1b3e59ca9cd5c",
-            "655c8d61526e451087dcc89d6a46b960"
-          ]
-        },
-        "id": "xLRVG6uFi6K7",
-        "outputId": "760fcefe-9182-4b59-852c-eb04e7f4d0b9"
+        "id": "xLRVG6uFi6K7"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  0%|          | 0/211269 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "b08ad85bd41c4b359316945e9ee9546b"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  0%|          | 0/211269 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "c60e49e6b8b94ed3940fc003f8f60f48"
-            }
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -219,50 +176,10 @@
         "print(f\"Extracted {len(diabetes_df)} diabetes-related samples out of {len(pubmed_raw_df)} total.\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 66,
-          "referenced_widgets": [
-            "2e90f4357b3e4c5990b96c23a91a75a8",
-            "c5e84dd9dbd040768b3f25dc9d35b95e",
-            "2707f94434cd44e4b9d85f3a072cbe6f",
-            "2c6dcea0b4684043896d0c1336ab3afa",
-            "8f0f5ced5f5c455abaad26bd05ced173",
-            "32fbe018741448a69a534bdf65cfffcb",
-            "18d7965f99be4ec5830a4c783cfc0546",
-            "30811afabdce4aacab45e06dca6e4f8f",
-            "98b1ce090c3e452484ee5ef45ba460bf",
-            "1c1647f1c60a4b88a0a01d007d2e2510",
-            "1542ef51764546dea83b7d939fc7a33c"
-          ]
-        },
-        "id": "Y_9bWhdli6ox",
-        "outputId": "66ca2262-fead-4c5f-bd2e-5032108f7a8e"
+        "id": "Y_9bWhdli6ox"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Filtering for diabetes-related MeSH terms:   0%|          | 0/211269 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "2e90f4357b3e4c5990b96c23a91a75a8"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracted 13739 diabetes-related samples out of 211269 total.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -496,43 +413,10 @@
         "pubmed_clean_df.to_excel(\"pubmed_clean.xlsx\", index=False)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125,
-          "referenced_widgets": [
-            "5a276658e6e5418a9e3420a60a51c699",
-            "cf6f57ffc9264f7ebd043ebdb8158933",
-            "3cb02e76107f4173abdf9015ed275a7e",
-            "0c809688288c4a608c208ffc8ee4897e",
-            "b752582c97904b7ebec6e0d9ef021043",
-            "6673c0d17a7d4fd2ab67c87c3592ed52",
-            "913b160abebc4e3fb66f64dac5c5dd8e",
-            "bfca279b20084cd495db16e902e24167",
-            "40013f704da5467ab4d2776d0d8424a9",
-            "a4a2d463a65647e1aa1bbb6acba27282",
-            "c712bf3a8a6d4f84a5e83c13d8e74818"
-          ]
-        },
-        "id": "mPSF36CBzXVG",
-        "outputId": "332f9b0b-ca52-4636-d6ea-c4b36a39fa7a"
+        "id": "mPSF36CBzXVG"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Cleaning QAs:   0%|                                                       | 0/13739 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "5a276658e6e5418a9e3420a60a51c699"
-            }
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -604,43 +488,10 @@
         "rag_data.to_excel(\"rag_dataset.xlsx\", index=False)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125,
-          "referenced_widgets": [
-            "11a1930b327148a4a9f0ea77f3780c21",
-            "971311b34ff744aa82f02f49fedfbff1",
-            "098f9c7e938d41c6af53cb288a0dfc97",
-            "b3662c7ccb4245d3b9a33d5bbd057d89",
-            "efffa689b40b4863b6ce5d1e14e1a695",
-            "b6af992371d04614a990b29764fa1225",
-            "d82af35049894af280d8f0b9fee45438",
-            "ca7eb237f3fd46b09dbcac54407c4f68",
-            "a42ce621a8344185a49c2522a8aeeb20",
-            "9247ed5c0e3f4e8da58453538584525c",
-            "e8a1386a0cd94040bd2a84f90b758ddb"
-          ]
-        },
-        "id": "bkiv5D2YufVD",
-        "outputId": "8816cb47-4010-4256-e690-04879d195a8f"
+        "id": "bkiv5D2YufVD"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "Processing data:   0%|                                                    | 0/13738 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "11a1930b327148a4a9f0ea77f3780c21"
-            }
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     }
   ]
 }
