using flant5 small

--- a/rag-sum-full_final.ipynb
+++ b/rag-sum-full_final.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-08T01:43:44.198061Z",
@@ -1308,10 +1308,10 @@
    "source": [
     "# Ablation configurations\n",
     "configs = [\n",
-    "    {\"name\": \"FAISS_k3\", \"retriever\": faiss_retriever, \"k\": 1},\n",
-    "    {\"name\": \"FAISS_k5\", \"retriever\": faiss_retriever, \"k\": 3},\n",
-    "    {\"name\": \"FAISS_k3\", \"retriever\": faiss_retriever, \"k\": 5},\n",
-    "    {\"name\": \"FAISS_k5\", \"retriever\": faiss_retriever, \"k\": 7},\n",
+    "    {\"name\": \"FAISS_k1\", \"retriever\": faiss_retriever, \"k\": 1},\n",
+    "    {\"name\": \"FAISS_k3\", \"retriever\": faiss_retriever, \"k\": 3},\n",
+    "    {\"name\": \"FAISS_k5\", \"retriever\": faiss_retriever, \"k\": 5},\n",
+    "    {\"name\": \"FAISS_k7\", \"retriever\": faiss_retriever, \"k\": 7},\n",
     "    {\"name\": \"FAISS_k10\", \"retriever\": faiss_retriever, \"k\": 10},\n",
     "]\n",
     "\n",
@@ -1368,9 +1368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8️⃣ Full Evaluation\n",
-    "\n",
-    "使用 ablation study 中表现最好的配置(actually is FAISS_k3)"
+    "## 8️⃣ Full Evaluation\n"
    ]
   },
   {
