--- a/Evaluation_Plots.ipynb
+++ b/Evaluation_Plots.ipynb
@@ -67,11 +67,11 @@
         "    \"Flesch_Kincaid\": [16.376, 16.412, 17.069]\n",
         "}\n",
         "\n",
-        "# 2️⃣ Convert each metric group into DataFrames\n",
+        "# Convert each metric group into DataFrames\n",
         "zero_qa_df = pd.DataFrame(zero_qa_metrics)\n",
         "zero_sum_df = pd.DataFrame(zero_sum_metrics)\n",
         "\n",
-        "# 3️⃣ Melt both DataFrames into long format\n",
+        "# Melt both DataFrames into long format\n",
         "zero_qa_long = zero_qa_df.melt(id_vars=[\"Prompt\"],\n",
         "                     var_name=\"Metric\",\n",
         "                     value_name=\"Score\")\n",
@@ -82,13 +82,13 @@
         "                      value_name=\"Score\")\n",
         "zero_sum_long[\"Task\"] = \"Summarisation\"\n",
         "\n",
-        "# 4️⃣ Combine them\n",
+        "# Combine them\n",
         "zero_results_df = pd.concat([zero_qa_long, zero_sum_long], ignore_index=True)\n",
         "\n",
-        "# 5️⃣ Reorder columns for readability\n",
+        "# Reorder columns for readability\n",
         "zero_results_df = zero_results_df[[\"Prompt\", \"Task\", \"Metric\", \"Score\"]]\n",
         "\n",
-        "# 6️⃣ Save or view\n",
+        "# View\n",
         "zero_results_df.head()"
       ],
       "metadata": {
@@ -435,11 +435,11 @@
         "    \"Flesch_Kincaid\": [16.3765, 15.9636, 15.5416]\n",
         "}\n",
         "\n",
-        "# 2️⃣ Convert each metric group into DataFrames\n",
+        "# Convert each metric group into DataFrames\n",
         "qa_df = pd.DataFrame(qa_metrics)\n",
         "sum_df = pd.DataFrame(sum_metrics)\n",
         "\n",
-        "# 3️⃣ Melt both DataFrames into long format\n",
+        "# Melt both DataFrames into long format\n",
         "qa_long = qa_df.melt(id_vars=['Model'],\n",
         "                     var_name=\"Metric\",\n",
         "                     value_name=\"Score\")\n",
@@ -450,13 +450,13 @@
         "                      value_name=\"Score\")\n",
         "sum_long[\"Task\"] = \"Summarisation\"\n",
         "\n",
-        "# 4️⃣ Combine them\n",
+        "# Combine them\n",
         "results_df = pd.concat([qa_long, sum_long], ignore_index=True)\n",
         "\n",
-        "# 5️⃣ Reorder columns for readability\n",
+        "# Reorder columns for readability\n",
         "results_df = results_df[[\"Model\", \"Task\", \"Metric\", \"Score\"]]\n",
         "\n",
-        "# 6️⃣ Save or view\n",
+        "# View\n",
         "results_df\n"
       ],
       "metadata": {
