--- a/Evaluation_Plots.ipynb
+++ b/Evaluation_Plots.ipynb
@@ -1099,7 +1099,7 @@
         "plt.figure(figsize=(8,5))\n",
         "sns.barplot(\n",
         "    data=zero_fk_df,\n",
-        "    x=\"Prompt\", y=\"Score\", palette=prompt_colours\n",
+        "    x=\"Prompt\", y=\"Score\", hue=\"Prompt\", palette=prompt_colours\n",
         ")\n",
         "plt.title(\"Flesch–Kincaid Readability Score by Prompt Type\")\n",
         "plt.ylim(min(zero_fk_df[\"Score\"]) - 0.5, max(zero_fk_df[\"Score\"]) + 0.5)  # narrow y-range\n",
@@ -1111,24 +1111,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 541
+          "height": 451
         },
         "id": "s1OW4TKeT_PU",
-        "outputId": "9810b1bb-4d2d-4ba9-89a4-b5374098a2bf"
+        "outputId": "8cd5e81d-0306-4711-f4b7-f51e52204b00"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1291252365.py:2: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
